apps/base/qlo-apps/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: qlo-apps
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
