apps/base/qlo-apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qlo-apps
  namespace: qlo-apps
spec:
  selector:
    app: qlo-apps
  ports:
    - port: 80
      targetPort: 80
